--- a/app/globals.css
+++ b/app/globals.css
@@ -10,11 +10,18 @@ body {
 
 .fondo {
   background-image: url('/img/Fondos/inicio.svg');
-  background-size: cover; /* O 'contain' dependiendo de cómo quieras que se ajuste */
+  background-size: cover;
+  /* O 'contain' dependiendo de cómo quieras que se ajuste */
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh; /* Ajusta según tus necesidades */
+  height: 100vh;
+  /* Ajusta según tus necesidades */
+}
+
+.fondo-especial {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 238, 157, 1) 50%, rgba(255, 225, 78, 1) 100%);
 }
 
 .config {
@@ -23,9 +30,11 @@ body {
 
 .error {
   background-image: url('/img/Fondos/error.svg');
-  background-size: cover; /* O 'contain' dependiendo de cómo quieras que se ajuste */
+  background-size: cover;
+  /* O 'contain' dependiendo de cómo quieras que se ajuste */
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh; /* Ajusta según tus necesidades */
+  height: 100vh;
+  /* Ajusta según tus necesidades */
 }
