--- a/app/globals.css
+++ b/app/globals.css
@@ -13,8 +13,8 @@ body {
     /* O 'contain' dependiendo de cómo quieras que se ajuste */
     background-position: center;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
+    width: 100vw;
+    min-height: 100vh;
     /* Ajusta según tus necesidades */
 }
 
