--- a/app/typing.css
+++ b/app/typing.css
@@ -32,6 +32,7 @@
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     border: 1.5px solid rgba(209, 213, 219, 0.3);
+    height: 35vh;
 }
 
 .playing .list li {
@@ -40,6 +41,7 @@
 }
 
 .playing .inputForm input {
+    margin-top: 50px;
     width: 100%;
     padding: 20px 0;
     outline: none;
@@ -107,15 +109,12 @@
     font-size: 50px;
 }
 
-.playing .inputForm #cosa {
+#cosa {
     width: 100%;
-    padding: 20px 0;
     outline: none;
     text-align: center;
-    font-size: x-large;
-    letter-spacing: 5px;
     background-color: #0005;
     color: #fff;
-    border: none;
-    border-radius: 20px;
+    font-size: 0.9em;
+    border-radius: 10px;
 }
