--- a/app/globals.css
+++ b/app/globals.css
@@ -58,7 +58,138 @@ body {
     display: grid;
     place-content: center;
 }
-.image-container .overlay{
-width: 1200px;
-height: 663px;
+.image-container .overlay {
+    width: 1200px;
+    height: 663px;
+}
+
+svg {
+    width: 80vw;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+:root {
+    font-family: 'Rubik', system-ui, -apple-system, BlinkMacSystemFont,
+        'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+        'Helvetica Neue', sans-serif;
+    color: #212121;
+}
+
+main {
+    display: grid;
+    place-content: center;
+}
+
+svg {
+    width: 80vw;
+}
+
+:root {
+    font-family: 'Rubik', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    color: #fff;
+}
+
+body {
+    margin: 0;
+}
+
+.content-alert {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    place-content: center;
+    background-color: #2121216c;
+}
+
+.alerta {
+    /* padding: 20px; */
+    width: 30vw;
+    min-height: 200px;
+    border-radius: 20px;
+    background-color: #fff;
+    display: grid;
+    grid-template-rows: 1fr 2fr 1fr;
+    justify-self: center;
+    border: 4px solid #ffd400;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+        rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.alerta .cabecera {
+    display: flex;
+    justify-content: flex-end;
+    margin: 10px;
+}
+
+.alerta .cabecera div {
+    border: none;
+    background-color: #e53935;
+    color: #80201e;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-weight: bold;
+}
+
+.alerta .contenido {
+    height: 100%;
+    display: grid;
+    place-content: center;
+    font-weight: bold;
+    font-size: 2em;
+    text-decoration: underline;
+    text-decoration-style: dotted;
+    text-decoration-color: #fff;
+    text-underline-offset: 8px;
+    text-decoration-thickness: 8px;
+    text-decoration-skip-ink: none;
+    background-color: #ffd400;
+}
+
+.alerta .contenido .text {
+    display: flex;
+    justify-content: center;
+}
+
+.alerta .contenido .line {
+    display: inline-block;
+    height: 100%;
+    width: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+}
+
+.alerta .botones {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+}
+
+.alerta .botones div {
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    font-weight: bold;
+    border: none;
+    background-color: #89e535;
+    display: grid;
+    place-content: center;
+}
+
+.alerta .botones div object {
+    width: 50px;
 }
